--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -118,6 +118,7 @@
 
     <!-- Document Success -->
     <string name="document_success_header_description">You successfully shared the following information with</string>
+    <string name="document_success_header_description_when_error">You successfully shared the information with</string>
     <string name="document_success_relying_party_default_name">@string/generic_default_relying_party_name</string>
     <string name="document_success_collapsed_supporting_text">@string/generic_view_details</string>
     <string name="document_success_sticky_button_text">@string/generic_close</string>
@@ -150,8 +151,8 @@
     <!-- Request Screen -->
     <string name="request_header_description">The following transaction requires your permission and authentication.</string>
     <string name="request_header_main_text">DATA SHARING REQUEST</string>
-    <string name="request_header_relying_party_default_name">@string/generic_default_relying_party_name</string>
-    <string name="request_header_relying_party_description">\ requests the following</string>
+    <string name="request_relying_party_default_name">@string/generic_default_relying_party_name</string>
+    <string name="request_relying_party_description">requests the following</string>
     <string name="request_warning_text">Please review carefully before sharing your data.</string>
     <string name="request_collapsed_supporting_text">@string/generic_view_details</string>
     <string name="request_no_data">The requested document is not available in your EUDI Wallet.
@@ -164,10 +165,7 @@
     <string name="request_element_identifier_not_available">Not available</string>
 
     <!-- Loading Screen -->
-    <string name="loading_content_header_description">Please wait…</string>
-    <string name="loading_success_config_description">You successfully shared the following information with</string>
-    <string name="loading_success_config_relying_party_default_name">@string/generic_default_relying_party_name</string>
-    <string name="loading_success_config_primary_button_text">@string/generic_close</string>
+    <string name="loading_header_description">Please wait…</string>
     <string name="loading_biometry_biometrics_enabled_description">Use your biometrics to approve the transaction.</string>
     <string name="loading_biometry_biometrics_not_enabled_description">To approve the transaction you need to verify your identity.</string>
 
@@ -270,6 +268,7 @@
 
     <!-- Issuance Success Screen -->
     <string name="issuance_success_header_description">You have successfully added the following to your wallet</string>
+    <string name="issuance_success_header_description_when_error">You have successfully added the document(s) to your wallet</string>
     <string name="issuance_success_header_issuer_default_name">@string/generic_default_issuer_name</string>
 
     <!-- Issuance Qr Scan -->
