change: Placed the AnimatedVisibility container that will handle the sliding in/out animation of the SideMenuScreen being shown as overlay above dashboard on menu click event, rebase resolve conflicts
Signed-off-by: Christos Kaitatzis <christos.kaitatzis@netcompany.com>

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="content_description_signature_icon">Signature</string>
     <string name="content_description_authenticate_icon">Authentication ID cards</string>
     <string name="content_description_change_pin_icon">Change PIN</string>
+    <string name="content_description_menu_icon">Menu</string>
 
     <!-- Placeholder content-->
     <string name="placeholder_content_issuer">Placeholder Issuer</string>
