--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -250,6 +250,10 @@
     <string name="documents_screen_filters_sort_default">Default</string>
     <string name="documents_screen_filters_sort_date_issued">Date Issued</string>
     <string name="documents_screen_filters_sort_expiry_date">Expiry Date</string>
+    <string name="documents_screen_filters_filter_by_issuer">Filter by issuer</string>
+    <string name="documents_screen_filters_filter_by_state">Filter by State</string>
+    <string name="documents_screen_filters_filter_by_state_valid">Valid</string>
+    <string name="documents_screen_filters_filter_by_state_expired">Expired</string>
     <string name="documents_screen_filters_filter_by_expiry_period">Filter by expiry period</string>
     <string name="documents_screen_filters_filter_by_expiry_period_1">Next 7 days</string>
     <string name="documents_screen_filters_filter_by_expiry_period_2">Next 30 days</string>
