--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -198,7 +198,7 @@
     <string name="dashboard_bottom_sheet_options_action_4">Sign document</string>
 
     <string name="dashboard_bottom_sheet_bluetooth_title">Enable bluetooth?</string>
-    <string name="dashboard_bottom_sheet_bluetooth_subtitle">Enable bluetooth to share your information using the QR/TAP option</string>
+    <string name="dashboard_bottom_sheet_bluetooth_subtitle">Enable bluetooth to share your information using the Authenticate in person or online option</string>
     <string name="dashboard_bottom_sheet_bluetooth_primary_button_text">@string/generic_enable_capitalized</string>
     <string name="dashboard_bottom_sheet_bluetooth_secondary_button_text">@string/generic_cancel_capitalized</string>
 
@@ -224,13 +224,9 @@
     <string name="home_screen_authenticate">Authenticate</string>
     <string name="home_screen_authenticate_description">Authenticate by sharing your data in person (in close proximity) or online (website/service).</string>
     <string name="home_screen_sign">Sign</string>
-    <string name="home_screen_sign_document">Sign document</string>
-    <string name="home_screen_sign_document_description">Sign a document digitally by choosing a file from your device ot by scanning a QR code.</string>
     <string name="home_screen_learn_more">Learn more</string>
     <string name="home_screen_authenticate_option_in_person">In person</string>
     <string name="home_screen_add_document_option_online">Online</string>
-    <string name="home_screen_sign_document_option_from_device">From device</string>
-    <string name="home_screen_sign_document_option_scan_qr">Scan QR</string>
 
     <!-- Home Screen Learn More Popups content -->
     <string name="home_screen_authenticate_learn_more_inner_title">Sign documents safely</string>
