Refactor: Improve QR scan screen UI
Updated the QR scan screen UI.

- Removed rounded corners and added padding to camera preview.
- Changed camera preview background color to black.
- Updated QR scanner border to be white and square.
- Added animations to informative text.
- Improved overall screen layout.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -304,7 +304,7 @@
 
     <!-- Issuance Add Document Screen -->
     <string name="issuance_add_document_title">Add document from list</string>
-    <string name="issuance_add_document_subtitle">Choose a digital document from the list below to add to your wallet. You may add more documents by scanning the QR code provided to you by an authorised issuing service.</string>
+    <string name="issuance_add_document_subtitle">Choose a digital document from the list below to add to your wallet.</string>
     <string name="issuance_add_document_deferred_success_title">@string/generic_document_pending</string>
     <string name="issuance_add_document_deferred_success_text">@string/generic_deferred_success_text</string>
     <string name="issuance_add_document_deferred_success_description">Your document has been requested. You will be notified when it has been issued to your wallet.</string>
