--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -30,7 +30,6 @@
     <string name="generic_continue_capitalized" tools:ignore="ButtonCase">CONTINUE</string>
     <string name="generic_enable_capitalized" tools:ignore="ButtonCase">ENABLE</string>
     <string name="generic_success">Success</string>
-    <string name="generic_document_pending">Document pending</string>
     <string name="generic_close">Close</string>
     <string name="generic_ok">OK</string>
     <string name="generic_dash">-</string>
@@ -141,9 +140,10 @@
     <string name="quick_pin_change_enter_new_subtitle">Select a quick pin for future logins</string>
     <string name="quick_pin_change_reenter_new_subtitle">Re-enter the new quick pin</string>
 
-    <string name="quick_pin_success_text">@string/generic_success</string>
-    <string name="quick_pin_create_success_description">You successfully set the quick pin</string>
-    <string name="quick_pin_create_success_btn">@string/generic_continue_capitalized</string>
+    <string name="quick_pin_create_success_text">Your wallet is secured!</string>
+    <string name="quick_pin_create_success_description">To activate your wallet, connect to your National System to add your Digital ID.</string>
+    <string name="quick_pin_create_success_btn">Add my Digital ID</string>
+    <string name="quick_pin_change_success_text">@string/generic_success</string>
     <string name="quick_pin_change_success_description">You successfully changed the quick pin</string>
     <string name="quick_pin_change_success_btn">BACK TO HOME</string>
 
@@ -306,7 +306,6 @@
     <!-- Issuance Add Document Screen -->
     <string name="issuance_add_document_title">Add document from list</string>
     <string name="issuance_add_document_subtitle">Choose a digital document from the list below to add to your wallet.</string>
-    <string name="issuance_add_document_deferred_success_title">@string/generic_document_pending</string>
     <string name="issuance_add_document_deferred_success_text">@string/generic_deferred_success_text</string>
     <string name="issuance_add_document_deferred_success_description">Your document has been requested. You will be notified when it has been issued to your wallet.</string>
     <string name="issuance_add_document_deferred_success_primary_button_text">@string/generic_ok</string>
@@ -322,7 +321,6 @@
 
     <!-- Issuance Document Offer -->
     <string name="issuance_document_offer_primary_button_text_add">Add</string>
-    <string name="issuance_document_offer_deferred_success_title">@string/generic_document_pending</string>
     <string name="issuance_document_offer_deferred_success_text">@string/generic_deferred_success_text</string>
     <string name="issuance_document_offer_deferred_success_description">Your documents from %1$s have been requested. You will be notified when they have been issued to your wallet.</string>
     <string name="issuance_document_offer_deferred_success_primary_button_text">@string/generic_ok</string>
