change: in document details screen, when a document is removed from bookmarks, an informative bottom sheet will be displayed, view transactions button was removed, reversed how sensitive info visibility icons are displayed
Signed-off-by: Christos Kaitatzis <christos.kaitatzis@netcompany.com>

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -283,11 +283,12 @@
 
     <string name="document_details_main_section_text">DOCUMENT DETAILS</string>
     <string name="document_details_issuer_section_text">ISSUER</string>
-    <string name="document_details_primary_button_text">View all transactions</string>
     <string name="document_details_secondary_button_text">Delete document</string>
 
     <string name="document_details_bottom_sheet_bookmark_info_title">Saved to favourites</string>
     <string name="document_details_bottom_sheet_bookmark_info_message">The document was successfully added to your favourites list.</string>
+    <string name="document_details_bottom_sheet_bookmark_removed_info_title">Removed from favourites</string>
+    <string name="document_details_bottom_sheet_bookmark_removed_info_message">The document was successfully removed from your favourites list.</string>
 
     <string name="document_details_bottom_sheet_badge_title">Trusted Relying Party</string>
     <string name="document_details_bottom_sheet_badge_subtitle">A Relying Party is considered trusted when it meets
