change: added option to retrieve logs in side menu list, also app version info text at the bottom
Signed-off-by: Christos Kaitatzis <christos.kaitatzis@netcompany.com>

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -210,6 +210,7 @@
     <!-- Dashboard Side Menu -->
     <string name="dashboard_side_menu_title">My EU Wallet</string>
     <string name="dashboard_side_menu_change_pin">Change PIN</string>
+    <string name="dashboard_side_menu_retrieve_logs">Retrieve logs</string>
 
     <!-- Home Screen -->
     <string name="home_screen_title">Home</string>
