Feat: Add Document expired status.
Add an expired status to the document status in the Dashboard's Documents screen.
- Added `documentHasExpired` function in `DocumentHelper.kt` to check if the document has expired.
- Updated document screen to support showing expired status.
- Updated resources with expired status string.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -180,9 +180,8 @@
 
     <!-- Dashboard -->
     <string name="dashboard_title">Welcome back</string>
-    <string name="dashboard_document_has_not_expired">Valid until</string>
-    <string name="dashboard_document_has_expired_one">Expired\ </string>
-    <string name="dashboard_document_has_expired_two">on</string>
+    <string name="dashboard_document_has_not_expired">Valid until:\ %1$s</string>
+    <string name="dashboard_document_has_expired">Expired</string>
     <string name="dashboard_document_deferred_pending">Pending</string>
     <string name="dashboard_document_deferred_failed">Issuance failed</string>
     <string name="dashboard_primary_fab_text">SHOW QR / TAP</string>
