Feat: Introduce Document Categories and Grouping
- Introduced `DocumentCategory` and `DocumentCategories` to organize documents.
- Added `toDocumentCategory` function to map `DocumentIdentifier` to `DocumentCategory`.
- Updated `DocumentsInteractor` to use `WalletCoreConfig` for document categories.
- Modified `DocumentsScreen` to display documents grouped by category.
- Refactored `DocumentDetailsItemUi` to `DocumentUi`, to store also category information.
- Grouped documents by category in `DocumentsViewModel`.
- Added translations for the document categories.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -330,4 +330,14 @@
     <!-- Issuance Document Errors -->
     <string name="issuance_generic_error">Something went wrong issuing your document(s)</string>
 
+    <!-- Document Categories -->
+    <string name="document_category_government">GOVERNMENT</string>
+    <string name="document_category_travel">TRAVEL</string>
+    <string name="document_category_finance">FINANCE</string>
+    <string name="document_category_education">EDUCATION</string>
+    <string name="document_category_health">HEALTH</string>
+    <string name="document_category_social_security">SOCIAL SECURITY</string>
+    <string name="document_category_retail">RETAIL</string>
+    <string name="document_category_other">OTHER</string>
+
 </resources>
