Refactor: Use string resources for item IDs
- Replaced hardcoded item IDs with string resources for the side menu items "Change PIN" and "Retrieve logs".
- Added a string resource for the "Select document" button.
- Updated the `DashboardViewModel`, `SideMenuScreen`, and `DocumentSignInteractor` to use the new string resources for item IDs.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -197,7 +197,9 @@
     <!-- Dashboard Side Menu -->
     <string name="dashboard_side_menu_title">My EU Wallet</string>
     <string name="dashboard_side_menu_change_pin">Change PIN</string>
+    <string name="dashboard_side_menu_change_pin_id">changePinId</string>
     <string name="dashboard_side_menu_retrieve_logs">Retrieve logs</string>
+    <string name="dashboard_side_menu_retrieve_logs_id">retrieveLogsId</string>
 
     <!-- Home Screen -->
     <string name="home_screen_title">Home</string>
@@ -255,6 +257,7 @@
     <string name="document_sign_title">Sign Document</string>
     <string name="document_sign_subtitle">Select a document from your device to sign electronically.</string>
     <string name="document_sign_select_document">Select document</string>
+    <string name="document_sign_select_document_button_id">signDocumentButtonId</string>
 
     <!-- Qr Scan -->
     <string name="qr_scan_permission_not_granted">Camera permission not provided\nOpen App Settings</string>
