Refactor: Improved the "No Results" case in Documents Screen.
- Modified the filter result in `DocumentsInteractor` to return an empty list if there are no results instead of a list containing a "No Results" item.
- Removed the hardcoded "No Results" item, replaced it with a new `showNoResultsFound` state variable in `DocumentsViewModel` to display the message dynamically when the document list is empty.
- Added a `NoResults` composable to display the "No Results" message when `showNoResultsFound` is true.
- Adjusted the result handling in `DocumentsViewModel` to set the `showNoResultsFound` flag based on the document list.
- Added display of NoResults composable in the screen when `showNoResultsFound` is set to true.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -224,6 +224,7 @@
     <string name="documents_screen_title">Documents</string>
     <string name="documents_screen_search_label">Search documents</string>
     <string name="documents_screen_search_no_results">No documents match your search. Try changing your search query or filters.</string>
+    <string name="documents_screen_search_no_results_id">noResultsId</string>
     <string name="documents_screen_add_document_title">Add document</string>
     <string name="documents_screen_add_document_description">Add documents to your wallet by choosing from a list or by scanning a provided QR code.</string>
     <string name="documents_screen_add_document_option_list">From list</string>
