--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -106,7 +106,8 @@
     <string name="content_description_signature_icon">Signature</string>
     <string name="content_description_authenticate_icon">Authentication ID cards</string>
     <string name="content_description_change_pin_icon">Change PIN</string>
-    <string name="content_description_check">Check</string>
+    <string name="content_description_check_icon">Check</string>
+    <string name="content_description_open_in_browser_icon">Open in browser</string>
 
     <!-- Biometric prompt -->
     <string name="biometric_prompt_title">Biometric authentication</string>
@@ -200,6 +201,8 @@
     <string name="dashboard_side_menu_change_pin_id">changePinId</string>
     <string name="dashboard_side_menu_retrieve_logs">Retrieve logs</string>
     <string name="dashboard_side_menu_retrieve_logs_id">retrieveLogsId</string>
+    <string name="dashboard_side_menu_changelog">Changelog</string>
+    <string name="dashboard_side_menu_changelog_id">changelogId</string>
 
     <!-- Home Screen -->
     <string name="home_screen_title">Home</string>
