feat: Transactions, Filter by date range
Added functionality to include a date range filter in transactions bottom sheet, after selecting start and end dates via a date picker dialog and, transactions are filtered within the time range on apply pressed.

Signed-off-by: Christos Kaitatzis <christos.kaitatzis@netcompany.com>

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -267,6 +267,8 @@
     <string name="transactions_screen_filters_title">Filter and sort</string>
     <string name="transaction_status_completed">Completed</string>
     <string name="transaction_status_failed">Failed</string>
+    <string name="transactions_screen_filters_start_date">Start date</string>
+    <string name="transactions_screen_filters_end_date">End date</string>
 
     <!-- Document Sign -->
     <string name="document_sign_title">Sign Document</string>
